nodejs/versioned_docs/version-1.23/api/class-androiddevice.mdx
---
id: class-androiddevice
title: "AndroidDevice"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[AndroidDevice] represents a connected device, either real hardware or emulated. Devices can be obtained using [android.devices([options])](./api/class-android.mdx#android-devices).


- [androidDevice.on('webview')](./api/class-androiddevice.mdx#android-device-event-web-view)
- [androidDevice.close()](./api/class-androiddevice.mdx#android-device-close)
- [androidDevice.drag(selector, dest[, options])](./api/class-androiddevice.mdx#android-device-drag)
- [androidDevice.fill(selector, text[, options])](./api/class-androiddevice.mdx#android-device-fill)
- [androidDevice.fling(selector, direction[, options])](./api/class-androiddevice.mdx#android-device-fling)
- [androidDevice.info(selector)](./api/class-androiddevice.mdx#android-device-info)
- [androidDevice.installApk(file[, options])](./api/class-androiddevice.mdx#android-device-install-apk)
- [androidDevice.launchBrowser([options])](./api/class-androiddevice.mdx#android-device-launch-browser)
- [androidDevice.longTap(selector[, options])](./api/class-androiddevice.mdx#android-device-long-tap)
- [androidDevice.model()](./api/class-androiddevice.mdx#android-device-model)
- [androidDevice.open(command)](./api/class-androiddevice.mdx#android-device-open)
- [androidDevice.pinchClose(selector, percent[, options])](./api/class-androiddevice.mdx#android-device-pinch-close)
- [androidDevice.pinchOpen(selector, percent[, options])](./api/class-androiddevice.mdx#android-device-pinch-open)
- [androidDevice.press(selector, key[, options])](./api/class-androiddevice.mdx#android-device-press)
- [androidDevice.push(file, path[, options])](./api/class-androiddevice.mdx#android-device-push)
- [androidDevice.screenshot([options])](./api/class-androiddevice.mdx#android-device-screenshot)
- [androidDevice.scroll(selector, direction, percent[, options])](./api/class-androiddevice.mdx#android-device-scroll)
- [androidDevice.serial()](./api/class-androiddevice.mdx#android-device-serial)
- [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout)
- [androidDevice.shell(command)](./api/class-androiddevice.mdx#android-device-shell)
- [androidDevice.swipe(selector, direction, percent[, options])](./api/class-androiddevice.mdx#android-device-swipe)
- [androidDevice.tap(selector[, options])](./api/class-androiddevice.mdx#android-device-tap)
- [androidDevice.wait(selector[, options])](./api/class-androiddevice.mdx#android-device-wait)
- [androidDevice.waitForEvent(event[, optionsOrPredicate])](./api/class-androiddevice.mdx#android-device-wait-for-event)
- [androidDevice.webView(selector[, options])](./api/class-androiddevice.mdx#android-device-web-view)
- [androidDevice.webViews()](./api/class-androiddevice.mdx#android-device-web-views)
- [androidDevice.input](./api/class-androiddevice.mdx#android-device-input)

## androidDevice.on('webview') {#android-device-event-web-view}
- type: &#60;[AndroidWebView]&#62;

Emitted when a new WebView instance is detected.

## androidDevice.close() {#android-device-close}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-close-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-close-return" class="list-anchor">#</a>

Disconnects from the device.

## androidDevice.drag(selector, dest[, options]) {#android-device-drag}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-drag-option-selector"/> &#60;[AndroidSelector]&#62; Selector to drag.<a href="#android-device-drag-option-selector" class="list-anchor">#</a>
- `dest`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-drag-option-dest"/> &#60;[Object]&#62; Point to drag to.<a href="#android-device-drag-option-dest" class="list-anchor">#</a>
  - `x` &#60;[number]&#62;
  - `y` &#60;[number]&#62;
- `options?` &#60;[Object]&#62;
  - `speed?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-drag-option-speed"/> &#60;[number]&#62; Optional speed of the drag in pixels per second.<a href="#android-device-drag-option-speed" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-drag-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-drag-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-drag-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-drag-return" class="list-anchor">#</a>

Drags the widget defined by `selector` towards `dest` point.

## androidDevice.fill(selector, text[, options]) {#android-device-fill}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fill-option-selector"/> &#60;[AndroidSelector]&#62; Selector to fill.<a href="#android-device-fill-option-selector" class="list-anchor">#</a>
- `text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fill-option-text"/> &#60;[string]&#62; Text to be filled in the input box.<a href="#android-device-fill-option-text" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fill-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-fill-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fill-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-fill-return" class="list-anchor">#</a>

Fills the specific `selector` input box with `text`.

## androidDevice.fling(selector, direction[, options]) {#android-device-fling}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fling-option-selector"/> &#60;[AndroidSelector]&#62; Selector to fling.<a href="#android-device-fling-option-selector" class="list-anchor">#</a>
- `direction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fling-option-direction"/> &#60;"down"|"up"|"left"|"right"&#62; Fling direction.<a href="#android-device-fling-option-direction" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `speed?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fling-option-speed"/> &#60;[number]&#62; Optional speed of the fling in pixels per second.<a href="#android-device-fling-option-speed" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fling-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-fling-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-fling-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-fling-return" class="list-anchor">#</a>

Flings the widget defined by `selector` in  the specified `direction`.

## androidDevice.info(selector) {#android-device-info}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-info-option-selector"/> &#60;[AndroidSelector]&#62; Selector to return information about.<a href="#android-device-info-option-selector" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-info-return"/> &#60;[Promise]<[AndroidElementInfo]>&#62;<a href="#android-device-info-return" class="list-anchor">#</a>

Returns information about a widget defined by `selector`.

## androidDevice.installApk(file[, options]) {#android-device-install-apk}
- `file`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-install-apk-option-file"/> &#60;[string]|[Buffer]&#62; Either a path to the apk file, or apk file content.<a href="#android-device-install-apk-option-file" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `args?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-install-apk-option-args"/> &#60;[Array]<[string]>&#62; Optional arguments to pass to the `shell:cmd package install` call. Defaults to `-r -t -S`.<a href="#android-device-install-apk-option-args" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-install-apk-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-install-apk-return" class="list-anchor">#</a>

Installs an apk on the device.

## androidDevice.launchBrowser([options]) {#android-device-launch-browser}
- `options?` &#60;[Object]&#62;
  - `acceptDownloads?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-accept-downloads"/> &#60;[boolean]&#62; Whether to automatically download all the attachments. Defaults to `true` where all the downloads are accepted.<a href="#android-device-launch-browser-option-accept-downloads" class="list-anchor">#</a>
  - `baseURL?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-base-url"/> &#60;[string]&#62; When using [page.goto(url[, options])](./api/class-page.mdx#page-goto), [page.route(url, handler[, options])](./api/class-page.mdx#page-route), [page.waitForURL(url[, options])](./api/class-page.mdx#page-wait-for-url), [page.waitForRequest(urlOrPredicate[, options])](./api/class-page.mdx#page-wait-for-request), or [page.waitForResponse(urlOrPredicate[, options])](./api/class-page.mdx#page-wait-for-response) it takes the base URL in consideration by using the [`URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor for building the corresponding URL. Examples:<a href="#android-device-launch-browser-option-base-url" class="list-anchor">#</a>
    * baseURL: `http://localhost:3000` and navigating to `/bar.html` results in `http://localhost:3000/bar.html`
    * baseURL: `http://localhost:3000/foo/` and navigating to `./bar.html` results in `http://localhost:3000/foo/bar.html`
    * baseURL: `http://localhost:3000/foo` (without trailing slash) and navigating to `./bar.html` results in `http://localhost:3000/bar.html`
  - `bypassCSP?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-bypass-csp"/> &#60;[boolean]&#62; Toggles bypassing page's Content-Security-Policy.<a href="#android-device-launch-browser-option-bypass-csp" class="list-anchor">#</a>
  - `colorScheme?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-color-scheme"/> &#60;"light"|"dark"|"no-preference"&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.<a href="#android-device-launch-browser-option-color-scheme" class="list-anchor">#</a>
  - `command?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-command"/> &#60;[string]&#62; Optional package name to launch instead of default Chrome for Android.<a href="#android-device-launch-browser-option-command" class="list-anchor">#</a>
  - `deviceScaleFactor?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-device-scale-factor"/> &#60;[number]&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.<a href="#android-device-launch-browser-option-device-scale-factor" class="list-anchor">#</a>
  - `extraHTTPHeaders?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-extra-http-headers"/> &#60;[Object]<[string], [string]>&#62; An object containing additional HTTP headers to be sent with every request.<a href="#android-device-launch-browser-option-extra-http-headers" class="list-anchor">#</a>
  - `forcedColors?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-forced-colors"/> &#60;"active"|"none"&#62; Emulates `'forced-colors'` media feature, supported values are `'active'`, `'none'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'none'`.<a href="#android-device-launch-browser-option-forced-colors" class="list-anchor">#</a>

    :::note
    It's not supported in WebKit, see [here](https://bugs.webkit.org/show_bug.cgi?id=225281) in their issue tracker.
    :::

  - `geolocation?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-geolocation"/> &#60;[Object]&#62;<a href="#android-device-launch-browser-option-geolocation" class="list-anchor">#</a>
    - `latitude` &#60;[number]&#62; Latitude between -90 and 90.
    - `longitude` &#60;[number]&#62; Longitude between -180 and 180.
    - `accuracy?` &#60;[number]&#62; Non-negative accuracy value. Defaults to `0`.
  - `hasTouch?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-has-touch"/> &#60;[boolean]&#62; Specifies if viewport supports touch events. Defaults to false.<a href="#android-device-launch-browser-option-has-touch" class="list-anchor">#</a>
  - `httpCredentials?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-http-credentials"/> &#60;[Object]&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).<a href="#android-device-launch-browser-option-http-credentials" class="list-anchor">#</a>
    - `username` &#60;[string]&#62;
    - `password` &#60;[string]&#62;
  - `ignoreHTTPSErrors?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-ignore-https-errors"/> &#60;[boolean]&#62; Whether to ignore HTTPS errors when sending network requests. Defaults to `false`.<a href="#android-device-launch-browser-option-ignore-https-errors" class="list-anchor">#</a>
  - `isMobile?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-is-mobile"/> &#60;[boolean]&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.<a href="#android-device-launch-browser-option-is-mobile" class="list-anchor">#</a>
  - `javaScriptEnabled?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-java-script-enabled"/> &#60;[boolean]&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.<a href="#android-device-launch-browser-option-java-script-enabled" class="list-anchor">#</a>
  - `locale?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-locale"/> &#60;[string]&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.<a href="#android-device-launch-browser-option-locale" class="list-anchor">#</a>
  - `logger?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-logger"/> &#60;[Logger]&#62; Logger sink for Playwright logging.<a href="#android-device-launch-browser-option-logger" class="list-anchor">#</a>
  - `offline?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-offline"/> &#60;[boolean]&#62; Whether to emulate network being offline. Defaults to `false`.<a href="#android-device-launch-browser-option-offline" class="list-anchor">#</a>
  - `permissions?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-permissions"/> &#60;[Array]<[string]>&#62; A list of permissions to grant to all pages in this context. See [browserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.<a href="#android-device-launch-browser-option-permissions" class="list-anchor">#</a>
  - `recordHar?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-record-har"/> &#60;[Object]&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into `recordHar.path` file. If not specified, the HAR is not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.<a href="#android-device-launch-browser-option-record-har" class="list-anchor">#</a>
    - `omitContent?` &#60;[boolean]&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`. Deprecated, use `content` policy instead.
    - `content?` &#60;"omit"|"embed"|"attach"&#62; Optional setting to control resource content management. If `omit` is specified, content is not persisted. If `attach` is specified, resources are persistet as separate files and all of these files are archived along with the HAR file. Defaults to `embed`, which stores content inline the HAR file as per HAR specification.
    - `path` &#60;[string]&#62; Path on the filesystem to write the HAR file to. If the file name ends with `.zip`, `attach` mode is used by default.
    - `mode?` &#60;"full"|"minimal"&#62; When set to `minimal`, only record information necessary for routing from HAR. This omits sizes, timing, page, cookies, security and other types of HAR information that are not used when replaying from HAR. Defaults to `full`.
    - `urlFilter?` &#60;[string]|[RegExp]&#62; A glob or regex pattern to filter requests that are stored in the HAR. When a `baseURL` via the context options was provided and the passed URL is a path, it gets merged via the [`new URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor.
  - `recordVideo?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-record-video"/> &#60;[Object]&#62; Enables video recording for all pages into `recordVideo.dir` directory. If not specified videos are not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.<a href="#android-device-launch-browser-option-record-video" class="list-anchor">#</a>
    - `dir` &#60;[string]&#62; Path to the directory to put videos into.
    - `size?` &#60;[Object]&#62; Optional dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
      - `width` &#60;[number]&#62; Video frame width.
      - `height` &#60;[number]&#62; Video frame height.
  - `reducedMotion?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-reduced-motion"/> &#60;"reduce"|"no-preference"&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.<a href="#android-device-launch-browser-option-reduced-motion" class="list-anchor">#</a>
  - `screen?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-screen"/> &#60;[Object]&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.<a href="#android-device-launch-browser-option-screen" class="list-anchor">#</a>
    - `width` &#60;[number]&#62; page width in pixels.
    - `height` &#60;[number]&#62; page height in pixels.
  - `serviceWorkers?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-service-workers"/> &#60;"allow"|"block"&#62; Whether to allow sites to register Service workers. Defaults to `'allow'`.<a href="#android-device-launch-browser-option-service-workers" class="list-anchor">#</a>
    * `'allow'`: [Service Workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API) can be registered.
    * `'block'`: Playwright will block all registration of Service Workers.
  - `strictSelectors?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-strict-selectors"/> &#60;[boolean]&#62; If specified, enables strict selectors mode for this context. In the strict selectors mode all operations on selectors that imply single target DOM element will throw when more than one element matches the selector. See [Locator] to learn more about the strict mode.<a href="#android-device-launch-browser-option-strict-selectors" class="list-anchor">#</a>
  - `timezoneId?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-timezone-id"/> &#60;[string]&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.<a href="#android-device-launch-browser-option-timezone-id" class="list-anchor">#</a>
  - `userAgent?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-user-agent"/> &#60;[string]&#62; Specific user agent to use in this context.<a href="#android-device-launch-browser-option-user-agent" class="list-anchor">#</a>
  - `videoSize?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-video-size"/> &#60;[Object]&#62; **DEPRECATED** Use `recordVideo` instead.<a href="#android-device-launch-browser-option-video-size" class="list-anchor">#</a>
    - `width` &#60;[number]&#62; Video frame width.
    - `height` &#60;[number]&#62; Video frame height.
  - `videosPath?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-videos-path"/> &#60;[string]&#62; **DEPRECATED** Use `recordVideo` instead.<a href="#android-device-launch-browser-option-videos-path" class="list-anchor">#</a>
  - `viewport?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-option-viewport"/> &#60;[null]|[Object]&#62; Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. `null` disables the default viewport.<a href="#android-device-launch-browser-option-viewport" class="list-anchor">#</a>
    - `width` &#60;[number]&#62; page width in pixels.
    - `height` &#60;[number]&#62; page height in pixels.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-launch-browser-return"/> &#60;[Promise]<[BrowserContext]>&#62;<a href="#android-device-launch-browser-return" class="list-anchor">#</a>

Launches Chrome browser on the device, and returns its persistent context.

## androidDevice.longTap(selector[, options]) {#android-device-long-tap}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-long-tap-option-selector"/> &#60;[AndroidSelector]&#62; Selector to tap on.<a href="#android-device-long-tap-option-selector" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-long-tap-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-long-tap-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-long-tap-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-long-tap-return" class="list-anchor">#</a>

Performs a long tap on the widget defined by `selector`.

## androidDevice.model() {#android-device-model}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-model-return"/> &#60;[string]&#62;<a href="#android-device-model-return" class="list-anchor">#</a>

Device model.

## androidDevice.open(command) {#android-device-open}
- `command`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-open-option-command"/> &#60;[string]&#62;<a href="#android-device-open-option-command" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-open-return"/> &#60;[Promise]<[AndroidSocket]>&#62;<a href="#android-device-open-return" class="list-anchor">#</a>

Launches a process in the shell on the device and returns a socket to communicate with the launched process.

## androidDevice.pinchClose(selector, percent[, options]) {#android-device-pinch-close}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-close-option-selector"/> &#60;[AndroidSelector]&#62; Selector to pinch close.<a href="#android-device-pinch-close-option-selector" class="list-anchor">#</a>
- `percent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-close-option-percent"/> &#60;[number]&#62; The size of the pinch as a percentage of the widget's size.<a href="#android-device-pinch-close-option-percent" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `speed?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-close-option-speed"/> &#60;[number]&#62; Optional speed of the pinch in pixels per second.<a href="#android-device-pinch-close-option-speed" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-close-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-pinch-close-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-close-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-pinch-close-return" class="list-anchor">#</a>

Pinches the widget defined by `selector` in the closing direction.

## androidDevice.pinchOpen(selector, percent[, options]) {#android-device-pinch-open}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-open-option-selector"/> &#60;[AndroidSelector]&#62; Selector to pinch open.<a href="#android-device-pinch-open-option-selector" class="list-anchor">#</a>
- `percent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-open-option-percent"/> &#60;[number]&#62; The size of the pinch as a percentage of the widget's size.<a href="#android-device-pinch-open-option-percent" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `speed?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-open-option-speed"/> &#60;[number]&#62; Optional speed of the pinch in pixels per second.<a href="#android-device-pinch-open-option-speed" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-open-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-pinch-open-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-pinch-open-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-pinch-open-return" class="list-anchor">#</a>

Pinches the widget defined by `selector` in the open direction.

## androidDevice.press(selector, key[, options]) {#android-device-press}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-press-option-selector"/> &#60;[AndroidSelector]&#62; Selector to press the key in.<a href="#android-device-press-option-selector" class="list-anchor">#</a>
- `key`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-press-option-key"/> &#60;[AndroidKey]&#62; The key to press.<a href="#android-device-press-option-key" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-press-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-press-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-press-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-press-return" class="list-anchor">#</a>

Presses the specific `key` in the widget defined by `selector`.

## androidDevice.push(file, path[, options]) {#android-device-push}
- `file`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-push-option-file"/> &#60;[string]|[Buffer]&#62; Either a path to the file, or file content.<a href="#android-device-push-option-file" class="list-anchor">#</a>
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-push-option-path"/> &#60;[string]&#62; Path to the file on the device.<a href="#android-device-push-option-path" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `mode?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-push-option-mode"/> &#60;[number]&#62; Optional file mode, defaults to `644` (`rw-r--r--`).<a href="#android-device-push-option-mode" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-push-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-push-return" class="list-anchor">#</a>

Copies a file to the device.

## androidDevice.screenshot([options]) {#android-device-screenshot}
- `options?` &#60;[Object]&#62;
  - `path?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-screenshot-option-path"/> &#60;[string]&#62; The file path to save the image to. If `path` is a relative path, then it is resolved relative to the current working directory. If no path is provided, the image won't be saved to the disk.<a href="#android-device-screenshot-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-screenshot-return"/> &#60;[Promise]<[Buffer]>&#62;<a href="#android-device-screenshot-return" class="list-anchor">#</a>

Returns the buffer with the captured screenshot of the device.

## androidDevice.scroll(selector, direction, percent[, options]) {#android-device-scroll}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-scroll-option-selector"/> &#60;[AndroidSelector]&#62; Selector to scroll.<a href="#android-device-scroll-option-selector" class="list-anchor">#</a>
- `direction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-scroll-option-direction"/> &#60;"down"|"up"|"left"|"right"&#62; Scroll direction.<a href="#android-device-scroll-option-direction" class="list-anchor">#</a>
- `percent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-scroll-option-percent"/> &#60;[number]&#62; Distance to scroll as a percentage of the widget's size.<a href="#android-device-scroll-option-percent" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `speed?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-scroll-option-speed"/> &#60;[number]&#62; Optional speed of the scroll in pixels per second.<a href="#android-device-scroll-option-speed" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-scroll-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-scroll-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-scroll-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-scroll-return" class="list-anchor">#</a>

Scrolls the widget defined by `selector` in  the specified `direction`.

## androidDevice.serial() {#android-device-serial}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-serial-return"/> &#60;[string]&#62;<a href="#android-device-serial-return" class="list-anchor">#</a>

Device serial number.

## androidDevice.setDefaultTimeout(timeout) {#android-device-set-default-timeout}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-set-default-timeout-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds<a href="#android-device-set-default-timeout-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-set-default-timeout-return"/> &#60;[void]&#62;<a href="#android-device-set-default-timeout-return" class="list-anchor">#</a>

This setting will change the default maximum time for all the methods accepting `timeout` option.

## androidDevice.shell(command) {#android-device-shell}
- `command`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-shell-option-command"/> &#60;[string]&#62; Shell command to execute.<a href="#android-device-shell-option-command" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-shell-return"/> &#60;[Promise]<[Buffer]>&#62;<a href="#android-device-shell-return" class="list-anchor">#</a>

Executes a shell command on the device and returns its output.

## androidDevice.swipe(selector, direction, percent[, options]) {#android-device-swipe}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-swipe-option-selector"/> &#60;[AndroidSelector]&#62; Selector to swipe.<a href="#android-device-swipe-option-selector" class="list-anchor">#</a>
- `direction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-swipe-option-direction"/> &#60;"down"|"up"|"left"|"right"&#62; Swipe direction.<a href="#android-device-swipe-option-direction" class="list-anchor">#</a>
- `percent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-swipe-option-percent"/> &#60;[number]&#62; Distance to swipe as a percentage of the widget's size.<a href="#android-device-swipe-option-percent" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `speed?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-swipe-option-speed"/> &#60;[number]&#62; Optional speed of the swipe in pixels per second.<a href="#android-device-swipe-option-speed" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-swipe-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-swipe-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-swipe-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-swipe-return" class="list-anchor">#</a>

Swipes the widget defined by `selector` in  the specified `direction`.

## androidDevice.tap(selector[, options]) {#android-device-tap}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-tap-option-selector"/> &#60;[AndroidSelector]&#62; Selector to tap on.<a href="#android-device-tap-option-selector" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `duration?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-tap-option-duration"/> &#60;[number]&#62; Optional duration of the tap in milliseconds.<a href="#android-device-tap-option-duration" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-tap-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-tap-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-tap-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-tap-return" class="list-anchor">#</a>

Taps on the widget defined by `selector`.

## androidDevice.wait(selector[, options]) {#android-device-wait}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-wait-option-selector"/> &#60;[AndroidSelector]&#62; Selector to wait for.<a href="#android-device-wait-option-selector" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `state?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-wait-option-state"/> &#60;"gone"&#62; Optional state. Can be either:<a href="#android-device-wait-option-state" class="list-anchor">#</a>
    * default - wait for element to be present.
    * `'gone'` - wait for element to not be present.
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-wait-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-wait-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-wait-return"/> &#60;[Promise]<[void]>&#62;<a href="#android-device-wait-return" class="list-anchor">#</a>

Waits for the specific `selector` to either appear or disappear, depending on the `state`.

## androidDevice.waitForEvent(event[, optionsOrPredicate]) {#android-device-wait-for-event}
- `event`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-wait-for-event-option-event"/> &#60;[string]&#62; Event name, same one typically passed into `*.on(event)`.<a href="#android-device-wait-for-event-option-event" class="list-anchor">#</a>
- `optionsOrPredicate?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-wait-for-event-option-options-or-predicate"/> &#60;[function]|[Object]&#62; Either a predicate that receives an event or an options object. Optional.<a href="#android-device-wait-for-event-option-options-or-predicate" class="list-anchor">#</a>
  - `predicate` &#60;[function]&#62; receives the event data and resolves to truthy value when the waiting should resolve.
  - `timeout?` &#60;[number]&#62; maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout).
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-wait-for-event-return"/> &#60;[Promise]<[Object]>&#62;<a href="#android-device-wait-for-event-return" class="list-anchor">#</a>

Waits for event to fire and passes its value into the predicate function. Returns when the predicate returns truthy value.

## androidDevice.webView(selector[, options]) {#android-device-web-view}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-web-view-option-selector"/> &#60;[Object]&#62;<a href="#android-device-web-view-option-selector" class="list-anchor">#</a>
  - `pkg?` &#60;[string]&#62; Optional Package identifier.
  - `socketName?` &#60;[string]&#62; Optional webview socket name.
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-web-view-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.<a href="#android-device-web-view-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-web-view-return"/> &#60;[Promise]<[AndroidWebView]>&#62;<a href="#android-device-web-view-return" class="list-anchor">#</a>

This method waits until [AndroidWebView] matching the `selector` is opened and returns it. If there is already an open [AndroidWebView] matching the `selector`, returns immediately.

## androidDevice.webViews() {#android-device-web-views}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="android-device-web-views-return"/> &#60;[Array]<[AndroidWebView]>&#62;<a href="#android-device-web-views-return" class="list-anchor">#</a>

Currently open WebViews.

## androidDevice.input {#android-device-input}
- type: &#60;[AndroidInput]&#62;

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./test-assertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
